<resources>
    <string name="app_name">ESTETIKA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="market">Market</string>
    <string name="profile">Profile</string>
    <string name="batik_destination">Batik Destination</string>
    <string name="title_scan">Scan</string>
    <string name="dont_have_an_account_yet">Don’t have an account yet?</string>
    <string name="register"><u>Register</u></string>
    <string name="new_to_estetika">Don\'t have an account yet?</string>
    <string name="login">Login</string>
    <string name="img_placeholder">Image Placeholder</string>
    <string name="login_title">ESTETIKA</string>
    <string name="login_message">Jelajahi semua pengalaman dan cerita siswa saat belajar di Dicoding, dan tentu saja Kamu juga bisa berbagi cerita Kamu di sini✍️</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_title">Ready to explore traditional culture?</string>
    <string name="full_name">Full name</string>
    <string name="et_email_error_message">Email address is not valid</string>
    <string name="et_password_error_message">Password minimal harus 8 karakter</string>
    <string name="registration_error_message">Registration failed, please try again.</string>
    <string name="registration_success">Registration success</string>
    <string name="login_error_message">Login failed, please try again.</string>
    <string name="login_success_message">Login success</string>
    <string name="dummy_name" translatable="false">John Doe</string>
    <string name="dummy_description" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eros arcu, lacinia in ligula ac, imperdiet blandit arcu.</string>
    <string name="dummy_date" translatable="false">21 Juli 2017</string>
    <string name="story_s_illustration">Story\'s illustration</string>
    <string name="stories">Stories</string>
    <string name="logout">Logout</string>
    <string name="create_story">Create story</string>
    <string name="error_occurred_message">An error occurred</string>
    <string name="story_illustration">Story illustration</string>
    <string name="detail_toolbar_title">%s\'s story</string>
    <string name="no_data">No data</string>
    <string name="stories_not_found_error">Stories not found</string>
    <string name="add_story_title">Add Story</string>
    <string name="upload_story">Upload Story</string>
    <string name="person_with_computer">Person with computer</string>
    <string name="select_image">Select image from</string>
    <string name="select_from_camera">Camera</string>
    <string name="select_from_gallery">Gallery</string>
    <string name="write_a_description">Write a description</string>
    <string name="desc_empty_field_error">Please fill the description field</string>
    <string name="empty_image_error">Please select an image</string>
    <string name="image_upload_failed">Story upload failed</string>
    <string name="story_upload">Story uploaded</string>
    <string name="language_setting">Language Setting</string>
    <string name="solemn">image desc</string>
    <string name="name">Username</string>
    <string name="username">username</string>
    <string name="title_welcome_page">Selamat Datang di Dicoding Story!!</string>
    <string name="message_welcome_page">Silakan Register jika belum mempunyai akun. Jika sudah punya, silakan login</string>
    <string name="title_activity_story_location">StoryLocationActivity</string>
    <string name="story_loc">Story Location</string>
    <string name="retry">coba lagi</string>
    <string name="location_permission_denied">Location permission not allowed</string>
    <string name="location_permission_denied_action">Change Setting</string>
    <string name="share_location">Share location</string>
    <string name="message_no_location">Please activate your location services</string>
    <string name="title_scan_batik">Scan Batik</string>
    <string name="select">Select</string>
    <string name="predict_image">Predict</string>
    <string name="add_image">Tambah</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="estetika_label">ESTETIKA</string>
    <string name="jenis_batik">Batik Sogan</string>
    <string name="title_batik">Name of Batik</string>
    <string name="batik_description">Batik Description</string>
    <string name="home_title_article">Article Type of Batik</string>
    <string name="see_all">See All</string>
    <string name="bg_layout">background image</string>
    <string name="top_home_title">Hello, ESTETIKA!</string>
    <string name="top_home_desc">A beautiful day to explore!</string>
    <string name="batik_shop">Batik Shop</string>
    <string name="batik_tourism">Batik Tourism</string>
    <string name="bottom_home_desc">Look for tourist attractions around you!</string>
    <string name="home_content">Home content</string>
    <string name="price">Price</string>
    <string name="tourism_title">Find the place. Get there.</string>
    <string name="batik_catalog">Batik Catalog</string>
    <string name="buy_now">Buy</string>
    <string name="batik_shop_title">Batik Shop</string>
    <string name="batik_shop_desc">Choose your batik and buy it now</string>
    <string name="view_video">LIHAT VIDEO</string>
    <string name="cara_buat_batik">Lihat Cara Pembuatan Batik</string>
    <string name="province_loc">Asal :</string>
    <string name="motif_m">Arti motif :</string>
    <string name="recommends_batik">Batik recommendations for you</string>
    <string name="related_place">Here are some related place</string>
    <string name="version">Version</string>
    <string name="app_ver">v 1.0</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="edit_profile">Edit Profile</string>
</resources>