<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit23.estetika.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.bangkit23.estetika.ui.destination.BatikDestinationFragment"
        android:label="@string/batik_destination"
        tools:layout="@layout/fragment_batik_destination" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.bangkit23.estetika.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.bangkit23.estetika.ui.market.MarketFragment"
        android:label="@string/market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit23.estetika.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>