<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_marginHorizontal="6dp"
    android:layout_marginVertical="10dp"
    card_view:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tvShopImage"
            android:layout_width="match_parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/select"
            android:layout_height="95dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvShopTitle"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:maxLines="2"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/jenis_batik"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tvShopPrice"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/tvShopBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:background="@drawable/roundshape_2"
            android:textSize="12sp"
            android:text="@string/buy_now"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
