<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.detailarticle.ArticleDetailActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_batik_putih"
        android:contentDescription="@string/bg_layout" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/a_tob"
                android:contentDescription="@string/dummy_name"/>

            <TextView
                android:id="@+id/nameBatik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title_batik"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" />

            <TextView
                android:id="@+id/batikDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="14dp"
                android:layout_marginTop="12dp"
                android:text="@string/batik_description"
                android:fontFamily="@font/poppins"
                android:textColor="@color/navy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameBatik" />

            <TextView
                android:id="@+id/artimotif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="12dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:text="@string/motif_m"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/batikDesc" />

            <TextView
                android:id="@+id/motif"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textSize="16sp"
                android:textColor="@color/navy"
                android:fontFamily="@font/poppins"
                android:text="@string/batik_description"
                app:layout_constraintStart_toEndOf="@+id/artimotif"
                app:layout_constraintTop_toTopOf="@+id/artimotif" />

            <TextView
                android:id="@+id/asal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/province_loc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artimotif" />

            <TextView
                android:id="@+id/provinceLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:textSize="16sp"
                android:textColor="@color/navy"
                android:fontFamily="@font/poppins"
                android:text="@string/story_loc"
                app:layout_constraintStart_toEndOf="@+id/asal"
                app:layout_constraintTop_toTopOf="@+id/asal" />

            <TextView
                android:id="@+id/howToBatik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cara_buat_batik"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provinceLoc" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView2"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_marginTop="12dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedSquareBorder"
                app:layout_constraintTop_toBottomOf="@+id/howToBatik"
                app:srcCompat="@drawable/craft_batik" />

            <Button
                android:id="@+id/buttonVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_video"
                android:textColor="@color/white"
                android:drawableEnd="@drawable/baseline_play_arrow_24"
                android:layout_marginTop="10dp"
                style="@style/Button.Corner"
                android:backgroundTint="#903b0d"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>